libsqsh_sources = files(
    'archive/archive.c',
    'archive/compression_options.c',
    'archive/inode_map.c',
    'archive/superblock.c',
    'archive/trailing_context.c',
    'directory/directory_index_iterator.c',
    'directory/directory_iterator.c',
    'easy/directory.c',
    'easy/file.c',
    'easy/traversal.c',
    'easy/xattr.c',
    'extract/extract_manager.c',
    'extract/extract_view.c',
    'extract/extractor.c',
    'extract/lz4.c',
    'extract/lzma.c',
    'extract/zlib.c',
    'extract/zstd.c',
    'file/file.c',
    'file/file_iterator.c',
    'file/file_reader.c',
    'file/fragment_view.c',
    'file/inode_device.c',
    'file/inode_directory.c',
    'file/inode_file.c',
    'file/inode_ipc.c',
    'file/inode_null.c',
    'file/inode_symlink.c',
    'mapper/curl_mapper.c',
    'mapper/map_iterator.c',
    'mapper/map_manager.c',
    'mapper/map_reader.c',
    'mapper/map_slice.c',
    'mapper/mapper.c',
    'mapper/static_mapper.c',
    'metablock/metablock_iterator.c',
    'metablock/metablock_reader.c',
    'table/export_table.c',
    'table/fragment_table.c',
    'table/id_table.c',
    'table/table.c',
    'table/xattr_table.c',
    'tree/path_resolver.c',
    'tree/traversal.c',
    'tree/walker.c',
    'utils/error.c',
    'utils/version.c',
    'xattr/xattr_iterator.c',
)

if get_option('posix').allowed()
    libsqsh_sources += files(
        'posix/file_ext.c',
        'posix/mmap_mapper.c',
    )
endif

